kubernetes/apps/default/misc-ingress/app/ingress-internal-plex.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: internal
  rules:
    - host: &host "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 32400
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: http
      port: 32400
  type: ClusterIP
